--- a/my-chart/values.yaml
+++ b/my-chart/values.yaml
@@ -5,7 +5,7 @@
 replicaCount: 1
 
 image:
-  repository: 211223789150.dkr.ecr.us-east-1.amazonaws.com/devops/my-docker-repo
+  repository: 905418296320.dkr.ecr.ap-southeast-2.amazonaws.com/devops/my-springboot-app-using-helm
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
   tag: ""
